Solve french trad

--- a/locales/fr_FR.po
+++ b/locales/fr_FR.po
@@ -110,7 +110,7 @@ msgid ""
 "graphic artist, project manager... <strong>Upgrade your skills</strong> and "
 "learn best practices with professionals."
 msgstr ""
-"Envie d'enseigner, de disséminer des connaissances et de l'expériences? Vous êtes "
+"Envie d'enseigner, de disséminer des connaissances et de l'expérience? Vous êtes "
 "un développeur, un graphiste, un chef de projet... <strong>Augmentez vos "
 "compétences</strong> et apprenez les meilleures pratiques avec des "
 "professionnels."
@@ -125,7 +125,7 @@ msgid ""
 "best quality."
 msgstr ""
 "Un autre nouvel outil pour créer vos applications? Non. La communauté sait "
-"quelles sont les meilleurs solutions pour votre problème. <strong>Nous ne "
+"quelles sont les meilleures solutions pour votre problème. <strong>Nous ne "
 "réinventons pas la roue</strong>, nous créons avec les outils gratuits et "
 "professionnels existants pour la meilleure qualité."
 
@@ -152,7 +152,7 @@ msgid ""
 "the knowledge or resources required. Ask the community to create your own "
 "project : "
 msgstr ""
-"L'idée est là, vous voulez votre application mais vous n'avez pas les "
+"L'idée est là, vous voulez créer votre application mais vous n'avez pas les "
 "connaissances ou les ressources nécessaires. Solliciter la communauté pour "
 "créer votre propre projet : "
 
@@ -179,7 +179,7 @@ msgid ""
 "Want to support your favorite software project, make a donation and become a "
 "kunzite : "
 msgstr ""
-"Vous voulez supporter votre projet favoris, faites une donation et devenez un "
+"Vous voulez supporter votre projet favori, faites une donation et devenez un "
 "kunzite : "
 
 msgid "Don't worry, It uses paypal and is totally secure"
